Fix concurrency issues in FlightClientManager and FlightStreamManager
Signed-off-by: Rishabh Maurya <rishabhmaurya05@gmail.com>